--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <div style="background-color:#ddeeff">
 <h1>Index page</h1>
+<h2>This is a test</h2>
 <a href="./folder1/index.html">Folder1</a>
+</div>
 </body>
 </html>
